<resources>
    <string name="app_name">unitechRFIDSample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="rp902">RP902</string>
    <string name="ht730">HT730</string>
    <string name="rg768">RG768</string>
    <string name="sample">Sample</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connect">Connect</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="connectState">Connect State :</string>
    <string name="temperature">Temperature :</string>
    <string name="power">Power :</string>
    <string name="profile">Profile :</string>
    <string name="inventoryTime">Inventory Time :</string>
    <string name="idleTime">Idle Time :</string>
    <string name="session">Session :</string>
    <string name="target">Target :</string>
    <string name="qValue">Q :</string>
    <string name="startQ">Start :</string>
    <string name="maxQ">Max :</string>
    <string name="minQ">Min :</string>
    <string name="toggleTarget">Toggle Target :</string>
    <string name="encoding">Encoding :</string>
    <string name="algorithm">Algorithm :</string>
    <string name="battery">Battery :</string>
    <string name="sku">SKU :</string>
    <string name="region">Region :</string>
    <string name="deviceName">Device Name :</string>
    <string name="serialNumber">SN :</string>
    <string name="version">Version :</string>
    <string name="powerMode">Power Mode :</string>
    <string name="readMode">Read Mode :</string>
    <string name="autoOffTimeList">Auto Off List :</string>
    <string name="autoOffTime">Auto Off  :</string>
    <string name="autoScreenOffTime">Auto Screen Off  :</string>
    <string name="operatingMode">Operating Mode :</string>
    <string name="beep">Beep :</string>
    <string name="vibrator">Vibrator :</string>
    <string name="time">Time :</string>
    <string name="continuousMode">Continuous Mode :</string>
    <string name="tari">TARI :</string>
    <string name="blf">BLF :</string>
    <string name="fastMode">Fast Mode :</string>

    <string name="inventory">Inventory</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="stop">Stop</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="factoryReset">Factory Reset</string>
    <string name="findDevice">Find Device</string>
    <string name="changeOperatingMode">Change Operating Mode</string>
    <string name="changeReadMode">Change Read Mode</string>

    <string name="display">Display Text On Screen:</string>
    <string name="btn_display">send</string>

    <string name="epc">EPC :</string>
    <string name="rssi">RSSI :</string>
    <string name="data">Data :</string>
    <string name="result">Result :</string>
    <string name="bluetoothMACAddress">Bluetooth MAC Address :</string>
</resources>