<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.unitech.unitechrfidsample.fragment.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">

    </fragment>
    <fragment
        android:id="@+id/BluetoothFragment"
        android:name="com.unitech.unitechrfidsample.fragment.BluetoothFragment"
        android:label="@string/bluetooth"
        tools:layout="@layout/fragment_bluetooth">

    </fragment>
    <fragment
        android:id="@+id/SampleFragment"
        android:name="com.unitech.unitechrfidsample.fragment.SampleFragment"
        android:label="@string/sample"
        tools:layout="@layout/fragment_sample">

    </fragment>
</navigation>