<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">


    <Button
        android:id="@+id/button_rp902"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp902"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_ht730"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ht730"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ht730"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_rg768"
        app:layout_constraintStart_toEndOf="@id/button_rp902"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_rg768"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rg768"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_ht730"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>